<resources>
    <string name="app_name">News</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="national">Nacional</string>
    <string name="sports">Deportes</string>
    <string name="world">Mundo</string>
    <string name="entertainment">Entretenimiento</string>
    <string name="health">Salud</string>
    <string name="technology">Tecnología</string>
    <string name="go_top">Ir arriba</string>
    <string name="reset">Reset</string>
    <string name="filters">Filters</string>
</resources>
